# game

./: Instructions.md  README.md  gobblet.cabal
src/: Main.hs  Move.hs  Rules.hs  Score.hs  State.hs  Test.hs  Types.hs
tests/: 00.moves  01  01.moves  02  02.moves  03  03.moves  04  04.moves  05  06  06.moves  07  07.moves  08  08.moves  09  09.moves  10  11  12  12.moves  13  14  14.moves  15  15.moves
