name:                gobblet
version:             0.1.0.0
homepage:            https://github.com/githubuser/gobblet#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gobblet
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       State, Rules, Move, Score, Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
                     , parsec
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable test-rules
  hs-source-dirs:      src
  main-is:             Test.hs
  ghc-options:         -main-is Test.testRules
  other-modules:       State, Rules, Move, Score, Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
                     , parsec
                     , directory

executable test-score
  hs-source-dirs:      src
  main-is:             Test.hs
  ghc-options:         -main-is Test.testScore
  other-modules:       State, Rules, Move, Score, Types 
  build-depends:       base >= 4.7 && < 5 
                     , containers 
                     , array 
                     , parsec 
                     , random 
                     , directory 
